--- a/fp2024.cabal
+++ b/fp2024.cabal
@@ -48,8 +48,10 @@ library
       async
     , base >=4.7 && <5
     , directory
+    , mtl
     , random
     , stm
+    , transformers
   default-language: Haskell2010
 
 executable fp2024-one
